week1 resolve contrast error 2

--- a/styles/base.css
+++ b/styles/base.css
@@ -40,7 +40,7 @@ nav {
     display: flex;
     justify-content: space-evenly;
     
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 20px;
 }
 
@@ -50,7 +50,7 @@ nav a {
 }
 
 nav a:hover {
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 /* ============= main css  ==========*/
